# gerenciador-de-combustivel

gerenciador_combustivel/: pyproject.toml
gerenciador_combustivel/src/gerenciador_combustivel/: .env  main.py
gerenciador_combustivel/src/gerenciador_combustivel/core/: create_tables.py  db.py  security.py
gerenciador_combustivel/src/gerenciador_combustivel/models/: supply.py  user.py  vehicle.py
gerenciador_combustivel/src/gerenciador_combustivel/repositories/: Supply_crud.py  user_crud.py  vehicle_crud.py
gerenciador_combustivel/src/gerenciador_combustivel/routers/: SupplyRouter.py  user_route.py  vehicleRouter.py
gerenciador_combustivel/src/gerenciador_combustivel/schemas/: schemas_supply.py  schemas_user.py  schemas_vehicle.py
gerenciador_combustivel/src/gerenciador_combustivel/services/: supply_service.py  user_service.py
